--- a/static/css/searchRoommate.css
+++ b/static/css/searchRoommate.css
@@ -5,12 +5,18 @@
 .container{
     text-align: center;
     padding-top: 10vh;
+    min-height: 100vh;
 }
 
 h6{
     margin: 0;
     letter-spacing: -0.1em;
     font-size: 13px;
+}
+
+h5{
+    font-family: 'S-CoreDream-6Bold';
+    margin-bottom: 10px;
 }
 
 /* 타이틀 */
@@ -112,7 +118,7 @@ small{
     background-color: white;
     padding: 5px;
 }
-button:first-child{
+.filter-btn-box button:first-child{
     background-color: none;
     background: linear-gradient(98.11deg, #918EFF 7.66%, #3F97FF 97.55%);
     -webkit-text-fill-color: transparent;
@@ -121,9 +127,6 @@ button:first-child{
     -moz-background-clip: text;
     color: transparent;
 }
-
-
-
 
 /* 필터박스 */
 #filter{
@@ -203,6 +206,17 @@ button:first-child{
     background-color: #254074;
 }
 
+.question input[type=number]{
+    width: 30%;
+    font-size: 13px;
+    border:1px solid rgb(199, 199, 199);
+    border-radius: 5px;
+}
+
+select+span{
+    font-size: 13px;
+}
+
 #filter-submit{
     font-family: 'S-CoreDream-6Bold';
     font-size: 14px;
@@ -214,8 +228,8 @@ button:first-child{
     background-color: white;
     height: 70%;
     /* padding: 2px 0; */
-
 }
+
 
 #keyboard_noise{
     margin-top:5px;
@@ -225,10 +239,18 @@ button:first-child{
 .search_bar{
     display: flex;
     justify-content: center;
+    margin: 15px 0 30px 0;
 }
+
+.search_bar h2{
+    color:#254074;
+    margin: 0 10px 0 0;
+    padding: 4px;
+}
+
 .search_bar form{
     display: flex;
-    width: 80%;
+    width: 90%;
 }
 .search_bar > h2{
     font-size: 20px;
@@ -245,19 +267,53 @@ button:first-child{
     border: 0;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.15);
     padding: 10px;
+    margin-right: 10px;
+}
 
-    
+.search_bar button{
+    position: relative;
+    left: -40px;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border-radius: 100px;
+    border: 0px solid red;
 }
 
 /* 게시판 테이블 */
 table{
     font-family: 'S-CoreDream-4Regular';
-    font-size: 15px;
+    font-size: 14px;
     width:100%;
+    /* min-height: 60vh; */
 }
 
-.table-bar{
-    border-bottom: 2px 0 rgb(210, 210, 210);
+thead > tr > th:nth-child(2){
+    letter-spacing: -2px;
+}
+
+table td{
+    font-family: 'S-CoreDream-3Light';
+
+}
+
+table thead{
+    border-color:rgb(231, 231, 231);
+    border-bottom-width: 1px;
+    border-bottom: 1px 0 rgb(210, 210, 210);
+    /* height: 5vh; */
+}
+
+/* 글쓰기버튼 */
+.new-content
+{
+    color: rgb(88, 88, 88);
+    font-size: 14px;
+}
+
+/*  */
+pagination-box{
+    margin: 0 auto;
 }
 
 
@@ -268,4 +324,22 @@ table{
     top: 90vh;
     left: 90vw;
     z-index: 10;
+}
+
+@media screen and (max-width: 768px){
+    .search_bar form{
+        width: 100%;
+    }
+
+    #filter{
+        grid-template-columns: 100%;
+    }
+    .question{
+        grid-column: 1/1;
+    }
+    #filter-submit{
+        grid-column: 1/1;
+    }
+
+
 }
