--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,5 +1,47 @@
 
+ /* login 실패 모달창 */
+ .popup-overlay{
+     top: 0px;
+     left: 0;
+     width: 100vw;
+     height: 100vh;
+     background: rgba(0, 0, 0, 0.5);
+     position: fixed;
+     padding: 20px;
+     /* display: none; */
+     z-index: 1;
+ }
+ .popup{
+    position: absolute;
+    top: 50%;
+    left: 49%;
+    transform: translate(-50%, -50%);
+    width: 370px;
+    height: 100px;
+    background: #f5f5f5;
+    z-index: 2;
+    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+ }
+ .popup .popup-close{
+    position: absolute;
+    top: 5px;
+    right: -10px;
+    width: 40px;
+    height: 40px;
+    font-size: 25px;
+    cursor: pointer;
+ }
+ .popup h4{
+    text-align: center;
+    font-size: 20px;
+    font-family: Jalnan;
+    line-height: 30px;
+    margin-top: 20px;
+
+ }
  /* login 페이지 */
+
  .login{
     width: 70vw;
     margin: 0 auto;
