--- a/static/css/base.css
+++ b/static/css/base.css
@@ -54,6 +54,7 @@
     margin: 0;
     padding: 0;
     color: #454545;
+    line-height: 1;
 
 }
 /* 공통적용 */
@@ -112,23 +113,26 @@ nav a {
     margin-right: 3vw;
 }
 
+
 nav > .right-menu
 {
     display: inline-block;
     color: rgba(93, 148, 255, 1);
 }
+
 nav li{
     list-style: none;
     color:#959595;
 }
 
 .first li{
-    font-size: 15px;
+    font-size: 14px;
     float: left; 
     /* height:2.5rem; */
     position:relative;
 
 }
+
 .second{
     position:absolute; top:100%; left:0;
     display:none;
@@ -139,17 +143,25 @@ nav li{
 
 }
 .second li{
-
     width:100%;
-    padding-left:1rem;
-    border-left: 5px solid rgba(145, 142, 255, 1);
+    padding: 0 0 5px 7px;
+    border-left: 3px solid rgba(145, 142, 255, 1);
     
 }
+
+.second li:last-child{
+    padding: 0 0 0px 7px;
+}
+
+.second li:hover{
+    color: #254074;
+}
+
 .first li:hover .second{display:block;}
 
 .first li:active .second{display:block;}
 
-.secont :hover{display:block;}
+.second :hover{display:block;}
 
 /* 푸터 */
 
@@ -175,4 +187,10 @@ footer div{
 footer p{
     padding: 0px 10px 10px 20px;
     color: white;
+}
+
+@media screen and (max-width: 765px){
+    footer div:nth-child(2){
+        display: block;
+    }
 }
