--- a/static/css/community.css
+++ b/static/css/community.css
@@ -1,3 +1,7 @@
+h5{
+    font-family: 'S-CoreDream-6Bold';
+    margin-bottom: 15px;
+}
 /* 정보게시판 */
 .com_container{
     width: 70vw;
@@ -6,28 +10,82 @@
     margin-top: 100px;
 }
 .com_container h3{
-    font-family: Jalnan;
-    font-size: 40px;
-    color: #254074;
-    margin: 0px auto;
-    width: 32vw;
+    font-size: 30px;
+    font-family: 'yg-jalnan';
+    color:#254074;
+    margin: 20px 0 50px 0;
     white-space  : nowrap;
 }
 
+/* 검색바 */
+.search_bar{
+    display: flex;
+    justify-content: center;
+    margin: 15px 0 30px 0;
+}
+
+.search_bar h2{
+    color:#254074;
+    margin: 0 10px 0 0;
+    padding: 4px;
+}
+
+.search_bar form{
+    display: flex;
+    width: 90%;
+}
+.search_bar > h2{
+    font-size: 20px;
+    font-family: 'yg-jalnan';
+}
+
+.search-input-box{
+    justify-content: center;
+    width: 100%;
+    height: 30px;
+    border-radius: 100px;
+    border: 0;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.15);
+    margin-right: 10px;
+}
+.search-input{
+    width: calc(97% - 30px);
+    border: 0;
+    padding: 5px 15px;
+    border-radius: 100px;
+}
+
+.search_bar button{
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border-radius: 100px;
+    border: 0px solid red;
+}
+
+.search_bar #plus_btn{
+    width: 30px;
+    height: 30px;
+    background: #FFFFFF;
+    border: 0;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.20);
+    border-radius: 100px;
+}
+
+
+/*  */
 .com_sub-content{
     border-bottom: 2px solid #C9C9C9;
     width:  100%;
-    margin: 100px auto 30px auto;
     display: grid;
-    grid-template-columns: 5vw 50vw 5vw;
+    grid-template-columns: 1fr 10fr 1fr;
     padding-bottom: 20px;
-    padding-left: 100px;
 }
 
 .com_sub-content input{
     font-family: 'S-CoreDream-5Medium';
     width: 95%;
-    height: 35px;
+    height: 30px;
     padding: 5px 15px;
     margin-bottom: 10px;
     font-size: 17px;
@@ -38,9 +96,6 @@
     border-radius: 100px;
 }
 #com_t{
-    float: right;
-    margin-right: 100px;
-    margin-top: 70px;
     font-size: 15px;
     font-family: 'S-CoreDream-5Medium';
     /* a클릭 없애기 */
@@ -121,4 +176,25 @@
     top: 90vh;
     left: 90vw;
     z-index: 10;
+}
+
+@media screen and (max-width: 768px){
+    .table{
+        font-size: 12px;
+    }
+    #first_open_modal{
+        width: 350px;
+    }
+    .search_bar form{
+        width: 100%;
+    }
+    #filter{
+        grid-template-columns: 100%;
+    }
+    .question{
+        grid-column: 1/1;
+    }
+    #filter-submit{
+        grid-column: 1/1;
+    }
 }
