--- a/static/css/searchRoommate.css
+++ b/static/css/searchRoommate.css
@@ -1,6 +1,3 @@
-*{
-    line-height: 1;
-}
 
 .container{
     text-align: center;
@@ -16,7 +13,7 @@ h6{
 
 h5{
     font-family: 'S-CoreDream-6Bold';
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 /* 타이틀 */
@@ -66,7 +63,7 @@ h5{
 }
 
 .first_open_content p{
-    margin-bottom: 17px;
+    margin-bottom: 20px;
 }
 
 .modal-btn{
@@ -78,7 +75,7 @@ h5{
     background-color: white;
     color:#254074;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
-    margin: 0 10px;
+    line-height: 1;
 }
 
 .modal-btn-X{
@@ -240,6 +237,7 @@ select+span{
     display: flex;
     justify-content: center;
     margin: 15px 0 30px 0;
+    position: relative;
 }
 
 .search_bar h2{
@@ -259,20 +257,19 @@ select+span{
 
 .search-input-box{
     width: 100%;
-}
-.search-input{
-    width: 100%;
     height: 30px;
     border-radius: 100px;
     border: 0;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.15);
-    padding: 10px;
     margin-right: 10px;
+}
+.search-input{
+    width: calc(95% - 30px);
+    border: 0;
+    padding: 5px 15px;
 }
 
 .search_bar button{
-    position: relative;
-    left: -40px;
     width: 30px;
     height: 30px;
     background-color: white;
@@ -327,10 +324,15 @@ pagination-box{
 }
 
 @media screen and (max-width: 768px){
+    .table{
+        font-size: 12px;
+    }
+    #first_open_modal{
+        width: 350px;
+    }
     .search_bar form{
         width: 100%;
     }
-
     #filter{
         grid-template-columns: 100%;
     }
@@ -340,6 +342,4 @@ pagination-box{
     #filter-submit{
         grid-column: 1/1;
     }
-
-
 }
