--- a/checkmate/templates/domitoryView.html
+++ b/checkmate/templates/domitoryView.html
@@ -18,6 +18,7 @@
         <!-- 프로필이미지 -->
         <p> {{ post.user_id.user_nickname }} </p>
         <!-- 닉네임 -->
+        <button onclick="location.href='{% url "domitory_scrap" post.id %}'">스크랩! 디자인 수정부탁합니당~</button>
     </div>
 
     <div >
