스크랩, 내가쓴글 기능 완성

--- a/checkmate/templates/mypageWritten.html
+++ b/checkmate/templates/mypageWritten.html
@@ -37,17 +37,17 @@
 
 
             {% for post in d_posts %}
-            <div class="mypage_list"  onclick='location.href="{% url 'domitoryView' post.id %}"'>
+            <div class="mypage_list"  >
                 <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written" id="checkbox">
-                <p class="mypage_content-title">기숙사 정보</p>
-                <p class="mypage_content-body">{{ post.title }}</p>
+                <p class="mypage_content-title" onclick='location.href="{% url 'domitoryView' post.id %}"'>기숙사 정보</p>
+                <p class="mypage_content-body" onclick='location.href="{% url 'domitoryView' post.id %}"'>{{ post.title }}</p>
             </div>
             {% endfor %}
             {% for post in o_posts %}
-            <div class="mypage_list" onclick='location.href="{% url 'offcampusView' post.id %}"'>
+            <div class="mypage_list" >
                 <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written" id="checkbox">
-                <p class="mypage_content-title">자취 정보</p>
-                <p class="mypage_content-body">{{ post.title }}</p>
+                <p class="mypage_content-title" onclick='location.href="{% url 'offcampusView' post.id %}"'>자취 정보</p>
+                <p class="mypage_content-body" onclick='location.href="{% url 'offcampusView' post.id %}"'>{{ post.title }}</p>
             </div>
             {% endfor %}
 
