--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -23,7 +23,7 @@
 
 
             <div class="mypage_sub-bar">
- 
+
                 <input type="checkbox" name="written" id="checkbox" class="checkbox_all" value='selectall'
                     onclick='selectAll(this);'>
 
@@ -36,33 +36,41 @@
             </form>
 
             {% for post in d_posts %}
-            <div class="mypage_list"  onclick='location.href="{% url 'domitoryView' post.id %}"'>
+            <div class="mypage_list">
                 <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written" id="checkbox">
-                <p class="mypage_content-title">{{ post.user_id.survey_ess_id.get_room_type_display }} | {{ post.user_id.survey_ess_id.get_grade_display }} | {{ post.user_id.user_gender }} </p>
-                <p class="mypage_content-body">{{ post.title }}</p>
+                <p class="mypage_content-title" onclick='location.href="{% url ' domitoryView' post.id %}"'>{{
+                    post.user_id.survey_ess_id.get_room_type_display }} | {{
+                    post.user_id.survey_ess_id.get_grade_display }} | {{ post.user_id.user_gender }} </p>
+                <p class="mypage_content-body" onclick='location.href="{% url ' domitoryView' post.id %}"'>{{ post.title
+                    }}</p>
             </div>
             {% endfor %}
             {% for post in o_posts %}
-            <div class="mypage_list" onclick='location.href="{% url 'offcampusView' post.id %}"'>
+            <div class="mypage_list">
                 <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written" id="checkbox">
-                <p class="mypage_content-title">{{ post.preface }}</p>
-                <p class="mypage_content-body">{{ post.title }}</p>
+                <p class="mypage_content-title" onclick='location.href="{% url ' offcampusView' post.id %}"'>{{
+                    post.user_id.survey_ess_id.get_room_type_display }} | {{
+                    post.user_id.survey_ess_id.get_grade_display }} | {{ post.user_id.user_gender }}</p>
+                <p class="mypage_content-body" onclick='location.href="{% url ' offcampusView' post.id %}"'>{{
+                    post.title }}</p>
             </div>
             {% endfor %}
 
             <button class="mypage_delete">삭제하기</button>
-        <div>
-            <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">◀</a></li>
-                {% for page in page_range %}
-                <li class="page-item"><a class="page-link" href="{% url 'mypageScrap'%}?page={{page}}">{{page}}</a></li>
-                {% endfor %}
-                <li class="page-item"><a class="page-link" href="#">▶</a></li>
-            </ul>
+            <div>
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" href="#">◀</a></li>
+                    {% for page in page_range %}
+                    <li class="page-item"><a class="page-link" href="{% url 'mypageScrap'%}?page={{page}}">{{page}}</a>
+                    </li>
+                    {% endfor %}
+                    <li class="page-item"><a class="page-link" href="#">▶</a></li>
+                </ul>
             </div>
 
         </div>
     </div>
+</div>
 
 
 
