--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -38,21 +38,15 @@
             {% for post in d_posts %}
             <div class="mypage_list">
                 <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written" id="checkbox">
-                <p class="mypage_content-title" onclick='location.href="{% url ' domitoryView' post.id %}"'>{{
-                    post.user_id.survey_ess_id.get_room_type_display }} | {{
-                    post.user_id.survey_ess_id.get_grade_display }} | {{ post.user_id.user_gender }} </p>
-                <p class="mypage_content-body" onclick='location.href="{% url ' domitoryView' post.id %}"'>{{ post.title
-                    }}</p>
+                <p class="mypage_content-title" onclick='location.href="{% url 'domitoryView' post.id %}"'>{{ post.user_id.survey_ess_id.get_room_type_display }} | {{ post.user_id.survey_ess_id.get_grade_display }} | {{ post.user_id.user_gender }} </p>
+                <p class="mypage_content-body" onclick='location.href="{% url 'domitoryView' post.id %}"'>{{ post.title }}</p>
             </div>
             {% endfor %}
             {% for post in o_posts %}
             <div class="mypage_list">
                 <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written" id="checkbox">
-                <p class="mypage_content-title" onclick='location.href="{% url ' offcampusView' post.id %}"'>{{
-                    post.user_id.survey_ess_id.get_room_type_display }} | {{
-                    post.user_id.survey_ess_id.get_grade_display }} | {{ post.user_id.user_gender }}</p>
-                <p class="mypage_content-body" onclick='location.href="{% url ' offcampusView' post.id %}"'>{{
-                    post.title }}</p>
+                <p class="mypage_content-title" onclick='location.href="{% url 'offcampusView' post.id %}"'>{{ post.user_id.survey_ess_id.get_room_type_display }} | {{ post.user_id.survey_ess_id.get_grade_display }} | {{ post.user_id.user_gender }}</p>
+                <p class="mypage_content-body" onclick='location.href="{% url 'offcampusView' post.id %}"'>{{ post.title }}</p>
             </div>
             {% endfor %}
 
