도연 브랜치 머지

--- a/checkmate/templates/domitoryCommunity.html
+++ b/checkmate/templates/domitoryCommunity.html
@@ -74,10 +74,9 @@
         </ul>
     </div>
 </div>
+{% endblock %}
 
-
-
-
+{% block last %}
 <script>
     
     // 커뮤니티에서 nav 고정
@@ -87,5 +86,7 @@
     const highlight = document.getElementById('nav_domitory');
     highlight.style.color ="rgba(37, 64, 116, 1)";
 </script>
-
 {% endblock %}
+
+
+
