--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -47,7 +47,7 @@
                             <input type="radio" id="state" name="state" value="2"><label for="state">매칭완료</label>
                         </div>
                     </div>
-                    <div class="essential">
+                    <!-- <div class="essential"> -->
                         <div class="question filter_age">
                             <h6 class="title">나이</h6>
                             <div class="answer">
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                     
-                    <div class="essential">
+                    <!-- <div class="essential"> -->
                         <div class="question filter_grade">
                             <h6 class="title">학년</h6>
                             <div class="answer">
