--- a/checkmate/templates/domitoryCommunity.html
+++ b/checkmate/templates/domitoryCommunity.html
@@ -15,28 +15,16 @@
                 <input  type="text" class="search-input" name="search_keyword" value="{{ search_keyword }}" placeholder="검색어를 입력해주세요">
                 <button id="search_btn" type="submit"><i class="fal fa-search"></i></button>
             </div>
-            <div>
-                {% if user_id %}
-                <button id="plus_btn" onclick="location.href='{% url 'dom_infoWrite' %}'"><i class="fal fa-plus"></i></button>
-                {% else %}
-                <button id="plus_btn" onclick="alert('글쓰기는 로그인 후에 가능합니다.')"><i class="fal fa-plus"></i></button>
-                {% endif %}
-            </div>
         </form>
+        <div>
+            {% if user_id %}
+            <button id="plus_btn" onclick='location.href="{% url 'dom_infoWrite' %}"'><i class="fal fa-plus"></i></button>
+            {% else %}
+            <button id="plus_btn" onclick="alert('글쓰기는 로그인 후에 가능합니다.')"><i class="fal fa-plus"></i></button>
+            {% endif %}
+        </div>
     </div>
-    <!-- <div class="com_sub-content">
-        <h5>검색</h5>
-        <form action="" method="get">
-            {% csrf_token %}
-            <input type="text" name="search_keyword" value="{{ search_keyword }}" placeholder="#역세권_오피스텔_어때요?">
-            <button id="com_submit" type="submit"><i class="fal fa-search"></i></button>
-        </form>
-        {% if user_id %}
-        <button id="plus_btn" onclick="location.href='{% url 'dom_infoWrite' %}'"><i class="fal fa-plus"></i></button>
-        {% else %}
-        <button id="plus_btn" onclick="alert('글쓰기는 로그인 후에 가능합니다.')"><i class="fal fa-plus"></i></button>
-        {% endif %}
-    </div> -->
+
     {% if search_keyword %}
     <h5> &nbsp; '{{ search_keyword }}' 검색 결과입니다</h5>
     {% endif %}
